--- a/Website-M.html
+++ b/Website-M.html
@@ -12,7 +12,7 @@
                 background-color: #f4f4f4;
             }
             header {
-                background-image: url("D:/Documents/header bg.jpg");
+                background-image: url('D:/Shahrukh-Repo/header bg.jpg');
                 color: black;
                 padding: 10px 0;
                 text-align: center;
@@ -29,7 +29,7 @@
                 text-align: center;
             }
             nav a:hover {
-                background-color: #ddd;
+                background-color: aqua;
                 color: black;
             }
             main {
