--- a/Website-M.html
+++ b/Website-M.html
@@ -9,10 +9,11 @@
                 font-family: Arial, sans-serif;
                 margin: 0;
                 padding: 0;
-                background-color: #f4f4f4;
+                background-color: palegoldenrod;
             }
             header {
-                background-image: url('D:/Shahrukh-Repo/header bg.jpg');
+                font-family: Georgia, 'Times New Roman', Times, serif;
+                background-color: greenyellow;
                 color: black;
                 padding: 10px 0;
                 text-align: center;
