--- a/Website-M.html
+++ b/Website-M.html
@@ -13,7 +13,7 @@
             }
             header {
                 font-family: Georgia, 'Times New Roman', Times, serif;
-                background-color: greenyellow;
+                background-color: purple;
                 color: black;
                 padding: 10px 0;
                 text-align: center;
@@ -71,7 +71,7 @@
             <p>You can reach us at contact@website-m.com or call us at (123) 456-7890.</p>
         </main>
         <footer>
-            <p>&copy; 2024 Website-M. All rights reserved.</p>
+            <p>&copy; 2026 Website-M by Shahrukh Ansari. All rights reserved.</p>
         </footer>
     </body>
 
